# tree-sitter-un

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-un.pc.in
bindings/c/tree_sitter/: tree-sitter-un.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_un/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterUnTests/: TreeSitterUnTests.swift
queries/: folds.scm  highlights.scm  indents.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
